# mavlink2protobuf_service

./: .gitignore  Cargo.toml  LICENSE  build.rs  cli.yml  rustfmt.toml
protos/: mavlink_common.proto  mavlink_common.rs
src/: lib.rs  main.rs
