[package]
name = "mavlink_proto"
version = "0.1.0"
authors = ["Michal Podhradsky <mpodhradsky@galois.com>"]
build = "build/main.rs"

[build-dependencies]
crc16 = "0.3.3"
byteorder = "0.5.3"
xml-rs = "0.2"
protoc-rust = "2.0"
quote = "0.3"
rustfmt = "0.9"

[[bin]]
name = "mavlink-connector"

[dependencies]
crc16 = "0.3.3"
byteorder = "0.5.3"
serial="0.4"