[package]
name = "mavlink_proto"
version = "0.1.0"
authors = ["Michal Podhradsky <mpodhradsky@galois.com>"]
build = "build/main.rs"

[build-dependencies]
crc16 = "0.3.3"
byteorder = "0.5.3"
xml-rs = "0.2"
quote = "0.3"
rustfmt = "0.9"

[[bin]]
name = "mavlink-connector"

[dependencies]
crc16 = "0.3.3"
byteorder = "0.5.3"
serial="0.4"
protobuf = "2.0"
zmq = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
